--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Михаил Карапетян</title>
     <meta charset="UTF-8">
 </head>
-<body>
+<body style="background:yellowgreen">
     <center>
         <h1>Сайт-визитка Михаила Карапетян</h1>
         <img alt="Здесь могла быть картинка :D" src="https://pp.userapi.com/c638220/v638220062/32649/Pcsw-nwbLNg.jpg" width="375" height="361"> <br />
